*** empty log message ***

--- a/DQMServices/Processor/ChangeLog
+++ b/DQMServices/Processor/ChangeLog
@@ -1,6 +1,7 @@
-2011-03-30
-        V00-09-01
-2011-03-09 Srecko Morovic <srecko.morovic@cern.ch>
+2011-04-08
+        V01-00-00 Srecko
+	Initial version committed to CVS (by Luis)
+2011-03-09
 	V00-00-02
 	Prepared a version for testing in the Integration System
 2011-02-29 Srecko Morovic <srecko.morovic@cern.ch>
